--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Page</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="jquery/jquery-3.5.1.min.js"></script>
-    <link rel="stylesheet" href="css/styles.css">
+    <script type="text/javascript" src="{{ url_for('static', filename='jquery/jquery-3.5.1.min.js')}}"></script>
+    <link rel="stylesheet" href="{{url_for('static',filename='styles.css')}}">
 </head>
 
 <body>
     <nav class="navigation">
         <div class="navigation__column">
             <a href='#'>
-                <img src='img/instagram_logo.png'>
+                <img src="{{url_for('static', filename='images/instagram_logo.png')}}">
             </a>
         </div>
         <div class="navigation__column">
@@ -44,7 +44,7 @@
     <main id="profile">
         <header class="profile__header">
             <div class="profile__column">
-                <img src="img/blank_avatar.png">
+                <img src="{{url_for('static', filename='images/blank_avatar.png')}}">
             </div>
             <div class="profile__column">
                 <div class="profile__title">
@@ -72,7 +72,7 @@
         </header>
         <section class="profile__photos">
             <div class="col-md-4 profile__photo">
-                <img src="img/feedPhoto/1.png">
+                <img src="{{url_for('static', filename='images/feedPhoto/1.png')}}">
                 <div class="profile__photo-overlay">
                     <span class="overlay__item">
                         <i class="fa fa-heart"></i>
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="col-md-4 profile__photo">
-                <img src="img/feedPhoto/2.png">
+                <img src="{{url_for('static', filename='images/feedPhoto/2.png')}}">
                 <div class="profile__photo-overlay">
                     <span class="overlay__item">
                         <i class="fa fa-heart"></i>
