--- a/css/styles.css
+++ b/css/styles.css
@@ -193,14 +193,24 @@
 }
 
 .profile__photos .profile__photo {
-    width: 31%;
-    margin-bottom: 35px;
+    width: 290px;
+    height: 290px;
     position: relative;
-    margin-right: 1%;
-    margin-left: 1%;
+    margin: 1%;
+    overflow: hidden;
 }
 
-.profile__photo img {
+.w_long img {
+    position: absolute;
+    width: auto;
+    max-height: 100%;
+    height: 100%;
+}
+
+.h_long img {
+    position: absolute;
+    height: auto;
+    max-width: 100%;
     width: 100%;
 }
 
