--- a/static/styles.css
+++ b/static/styles.css
@@ -236,24 +236,153 @@
 /* 이미지 파일 새로 업로드  css*/
 
 .profile__photos .empty__photo {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: start;
+    max-width: 936px;
+    width: 100%;
+    width: 290px;
+    height: 290px;
+    position: relative;
+    margin: 1%;
+    overflow: hidden;
     background-color: #e6e6e6;
 }
 
-.profile__photo .fa-plus-circle {
+.empty__photo .fa-plus-circle {
     font-size: 50px;
-    width: 100%;
-    height: 100%;
     display: flex;
+    flex-direction: column;
+    height: 290px;
+    width: 290px;
     justify-content: center;
     align-items: center;
     color: white;
     transition: color 0.2s linear;
 }
 
-.profile__photo .fa-plus-circle:hover {
+.empty__photo .fa-plus-circle:hover {
     color: #3f99ed;
 }
 
 #img_input {
     display: none;
+}
+
+/* post modal css */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+#post_modal {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+  
+#post_modal .photo {
+    background-color: white;
+    border: 1px solid #e6e6e6;
+    border-radius: 3px;
+    width: 100%;
+    max-width: 600px;
+    margin-bottom: 65px;
+}
+  
+.photo .photo__header {
+    padding: 15px;
+    display: flex;
+    align-items: center;
+}
+  
+.photo__header .photo__avatar {
+    width: 32px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+  
+.photo .photo__user-info .photo__author {
+    display: block;
+    font-weight: 600;
+    margin-bottom: 5px;
+    width: 500px;
+}
+  
+.photo .photo__main > img {
+    max-width: 100%;
+}
+  
+.photo .photo__info {
+    padding: 15px 20px;
+}
+  
+.photo__actions {
+    margin-bottom: 15px;
+    font-size: 115%;
+}
+  
+.photo__actions .photo__action:first-child {
+    margin-right: 15px;
+}
+  
+.photo__actions .photo__action {
+    cursor: pointer;
+}
+  
+.photo .photo__likes {
+    font-weight: 600;
+    margin-bottom: 10px;
+    display: block;
+}
+  
+.photo .photo__add-comment-container {
+    margin-top: 15px;
+    border-top: 1px solid #e6e6e6;
+    padding-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+  
+.photo__add-comment-container textarea {
+    width: 90%;
+    border: 0;
+    font-size: 14px;
+    resize: none;
+    height: 20px;
+}
+  
+.photo__add-comment-container textarea:focus,
+.photo__add-comment-container textarea:active {
+    outline: none;
+}
+  
+.photo__add-comment-container i {
+    cursor: pointer;
+}
+  
+.photo .photo__time-ago {
+    font-size: 10px;
+    text-transform: uppercase;
+    color: #999;
+    margin-top: 10px;
+    display: block;
+}
+  
+.photo__comment {
+    margin-bottom: 10px;
+}
+  
+.photo__comments .photo__comment-author {
+    font-weight: 600;
+    list-style-type: none;
 }
