--- a/templates/profile.html
+++ b/templates/profile.html
@@ -153,7 +153,7 @@
             }
 
             $.ajax({
-                url: "{{url_for('bp.imageUpload')}}",
+                url: "{{url_for('image_bp.imageUpload')}}",
                 processData: false,
                 contentType: false,
                 datatype: 'json',
